@@ -27,14 +27,14 @@
 		       ((x) & 0xff000000U) >> 24 | \
 		       ((x) & 0x0000ff00U) << 8  | \
 		       ((x) & 0x00ff0000U) >> 8)
-#  define bswap_64(x) (((x) & 0x00000000000000ffU) << 56 | \
-		       ((x) & 0xff00000000000000U) >> 56 | \
-		       ((x) & 0x000000000000ff00U) << 40 | \
-		       ((x) & 0x00ff000000000000U) >> 40 | \
-		       ((x) & 0x0000000000ff0000U) << 24 | \
-		       ((x) & 0x0000ff0000000000U) >> 24 | \
-		       ((x) & 0x00000000ff000000U) << 8 | \
-		       ((x) & 0x000000ff00000000U) >> 8)
+#  define bswap_64(x) (((x) & 0x00000000000000ffULL) << 56 | \
+		       ((x) & 0xff00000000000000ULL) >> 56 | \
+		       ((x) & 0x000000000000ff00ULL) << 40 | \
+		       ((x) & 0x00ff000000000000ULL) >> 40 | \
+		       ((x) & 0x0000000000ff0000ULL) << 24 | \
+		       ((x) & 0x0000ff0000000000ULL) >> 24 | \
+		       ((x) & 0x00000000ff000000ULL) << 8 | \
+		       ((x) & 0x000000ff00000000ULL) >> 8)
 #endif
 
 #if BYTE_ORDER == LITTLE_ENDIAN
